# grpc_generator

./: .gitignore  Gemfile  README.md  buf.gen.yaml  flake.nix  main.rb  run  sample.proto
lib/cli/: Cargo.toml
lib/cli/src/: main.rs
lib/proto-to-package/: Cargo.toml  README.md
lib/proto-to-package/res/python/: template.README.md  template.__init__.py  template.pyproject.toml
lib/proto-to-package/res/ruby/: Gemfile  README.md  ruby_contracts.gemspec
lib/proto-to-package/res/ruby/lib/: loader.rb
lib/proto-to-package/res/ruby/lib/ruby_contracts/: version.rb
lib/proto-to-package/res/ruby/sig/: ruby_contracts.rbs
lib/proto-to-package/res/ruby/spec/: ruby_contracts_spec.rb  spec_helper.rb
lib/proto-to-package/src/: main.rs
lib/proto-to-package/src/package/: mod.rs  oas.rs  python.rs  python_parser.rs  ruby.rs
