[package]
name = "proto-to-package"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
pathsearch = { version = "0.2.0" }
walkdir = { version = "2.4.0" }
rustpython-parser = { version = "0.3.0" }
